<resources>

    <string name="app_name">MTUchanger</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_client">MTUchanger</string>
    <string name="description">Type the MTU value below:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="author">Author: Jakub \"Cubix\" Cisło\nhttp://cubix.one.pl</string>
    <string name="autostart">Autostart</string>
    <string name="interfaceName">Interface name:</string>
    <string name="checkInterfaceName">Check interface name</string>

</resources>